# buggy

./: .gitignore  README.md  buggy.cabal  sass.sh
app/: Main.hs
app/Buggy/Core/: Issue.hs  Types.hs
app/Buggy/Persistence/: Postgre.hs
app/Buggy/Web/: Entry.hs  Signin.hs  Types.hs  Util.hs
app/Buggy/Web/Views/: Index.hs  Templates.hs
buggy/: .gitignore  buggy.cabal  buildreact.js  package.json  stack.yaml
buggy/app/: Main.hs
buggy/app/Buggy/: Accounts.hs
buggy/app/Buggy/Logic/: Account.hs  Issue.hs
buggy/app/Buggy/Notifications/: Email.hs
buggy/app/Buggy/OAuth/: Types.hs
buggy/app/Buggy/Persistence/: Instances.hs  Postgre.hs  Types.hs
buggy/app/Buggy/Rest/: Program.hs
buggy/app/Buggy/Types/: Types.hs
buggy/app/Buggy/Views/: Form.hs  Game.hs  Index.hs  Issue.hs  IssueReport.hs  Templates.hs  Types.hs  Util.hs
buggy/app/Buggy/Web/: Entry.hs
buggy/app/Buggy/Web/Views/: Index.hs  Templates.hs
buggy/data/: schema.sql
buggy/web/assets/js/: comment.jsx  create_issue.jsx  create_issue_comment.jsx  create_issue_report.jsx  create_issue_report_comment.jsx  edit_issue.jsx  index.js  index.jsx  issue.jsx  issue_report.jsx  issues.jsx  login.js  login.jsx  program.jsx  report_comment.jsx  user.js
buggy/web/assets/js/model/: router_params.js
buggy/web/assets/sass/: _buttons.scss  _labels.scss
buggy/web/typescript/src/: create_issue.tsx  create_issue_comment.tsx  create_issue_report_comment.tsx  edit_issue.tsx  issue_report.tsx  login.tsx  report_comment.tsx
buggy/web/typescript/src/model/: router_params.ts
data/: schema.sql
web/assets/css/: styles.css  styles.css.map
web/assets/js/: index.js  index.js.map  user.js
web/assets/js/model/: router_params.js.map
web/assets/sass/: _banner.scss  _cards.scss  _forms.scss  _lists.scss  _main.scss  _navbar.scss  _utilities.scss  _variables.scss  styles.scss
web/sass/: package.json
web/sass/src/: _banner.scss  _buttons.scss  _cards.scss  _labels.scss  _lists.scss  _navbar.scss  _type.scss  _utilities.scss  _variables.scss  styles.scss
web/typescript/: package.json  typings.json  webpack.config.js
web/typescript/src/: actions.ts  comment.tsx  create_issue.tsx  create_issue_report.tsx  edit_issue.tsx  games.tsx  index.tsx  issue.tsx  issue_report.tsx  issues.tsx  login.tsx  loginFunctions.ts  program.tsx  program_summaries.tsx  store.ts  updates.tsx  user.ts
web/typescript/src/model/: types.ts
