name:                buggy
version:             0.1.0.0
synopsis:            Bug tracker for games
description:         Please see README.md
homepage:            https://github.com/Deadleg/buggy#readme
license:             GPLv3
license-file:        LICENSE
author:              William
maintainer:          deadleg@gmail.com
copyright:           2017 William
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable buggy-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Buggy.Web.Views.Index,
                       Buggy.Web.Views.Templates,
                       Buggy.Web.Entry,
                       Buggy.Web.Types,
                       Buggy.Web.Signin,
                       Buggy.Core.Types,
                       Buggy.Core.Issue,
                       Buggy.Persistence.Postgre
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , buggy
                     , happstack-server >= 7.4.5
                     , blaze-html >= 0.8.1.1
                     , text >= 1.1.0.0 && < 1.3
                     , postgresql-simple >= 0.5.1.2
                     , transformers >= 0.4.2.0
                     , time >= 1.5.0.1
                     , aeson >= 0.11.2.0
                     , bytestring >= 0.10.6.0
                     , containers >= 0.5.6.2
                     , text >= 1.2.2.0
                     , smtp-mail >= 0.1.4.5
                     , safecopy >= 0.8.6
                     , jwt >= 0.7.1
                     , text >= 1.2.2.0
                     , http-conduit >= 2.1.10.1
                     , base64-bytestring >= 1.0.0.1
                     , scientific >= 0.3.4.6
  default-language:    Haskell2010

test-suite buggy-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , buggy
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Deadleg/buggy
