name:                buggy
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/buggy#readme
license:             BSD3
license-file:        LICENSE
author:              Example Author Name
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable buggy-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Buggy.Views.Index,
                       Buggy.Views.Templates,
                       Buggy.Types.Types,
                       Buggy.Views.Types,
                       Buggy.Accounts,
                       Buggy.Persistence.Postgre,
                       Buggy.Logic.Issue
                       Buggy.Rest.Program
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , buggy
                     , happstack-server >= 7.4.5
                     , happstack-clientsession >= 7.3.0
                     , blaze-html >= 0.8.1.1
                     , text >= 1.1.0.0 && < 1.3
                     , postgresql-simple >= 0.5.1.2
                     , transformers >= 0.4.2.0
                     , time >= 1.5.0.1
                     , aeson >= 0.9.0.1
                     , bytestring >= 0.10.6.0
                     , containers >= 0.5.6.2
                     , text >= 1.2.2.0
                     , smtp-mail >= 0.1.4.5
                     , safecopy >= 0.8.6
                     , jwt >= 0.6.0
                     , text >= 1.2.2.0
                     , http-conduit >= 2.1.10.1
  default-language:    Haskell2010

test-suite buggy-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , buggy
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/buggy
